--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta name="format-detection" content="telephone=no">
 	<link rel="profile" href="//gmpg.org/xfn/11">
 	<link rel="pingback" href="http://rexcoin.themerex.net/xmlrpc.php">
-	<title>Virtual Reality Wallet &ndash; Fastest and Secured Crypto Wallet</title>
+	<title>VR Wallet - Fastest and Secured Crypto Wallet</title>
 	<meta name="robots" content="noindex, nofollow">
 	<link rel="dns-prefetch" href="//s.w.org">
 	<link rel="alternate" type="application/rss+xml" title="VR Wallet &raquo; Feed"
@@ -302,7 +302,7 @@
 												<ul class="sub-menu">
 													<li id="menu-item-286"
 														class="menu-item menu-item-type-post_type menu-item-object-page menu-item-286">
-														<a href="typography.html"><span>Typography</span></a></li>
+														<a href="#footer-contact"><span>Typography</span></a></li>
 													<li id="menu-item-284"
 														class="menu-item menu-item-type-post_type menu-item-object-page menu-item-284">
 														<a href="shortcodes.html"><span>Shortcodes</span></a></li>
@@ -1861,7 +1861,6 @@
 
 				</div><!-- </.content_wrap> -->
 			</div><!-- </.page_content_wrap> -->
-
 			<footer class="footer_wrap footer_custom footer_custom_448 footer_custom_main-footer scheme_dark">
 				<div
 					class="vc_row wpb_row vc_row-fluid vc_custom_1531735969483 vc_row-has-fill shape_divider_top-none shape_divider_bottom-none">
